manifest/app/auth-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - image: minhbui1/auth-api
        name: auth-api
        ports:
        - containerPort: 8081
          name: authport
        livenessProbe:
          httpGet:
            path: /version
            port: authport
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /version
            port: authport
          failureThreshold: 3
          initialDelaySeconds: 1
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
      restartPolicy: Always
