manifest/app/auth-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: todoapp
spec:
  selector:
    app: auth-api
  ports:
  - port: 8081
  type: ClusterIP
